--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'checkstyle'
+apply plugin: 'pmd'
+apply plugin: 'findbugs'
 
 group = 'com.evolve'
 version = '0.0.1-SNAPSHOT'
@@ -22,9 +25,51 @@ repositories {
 	mavenCentral()
 }
 
+findbugs{
+	ignoreFailures=true
+	findbugsTest.enabled=false
+}
+
+tasks.withType(FindBugs) {
+	reports {
+		xml.enabled = false
+		html.enabled = true
+	}
+}
+tasks.withType(Pmd){
+	reports{
+		xml.enabled=true
+		html.enabled=true
+	}
+}
+
+pmd {
+	ignoreFailures = true
+	pmdTest.enabled=false
+	ruleSets = [
+			'java-basic',
+			'java-braces',
+			'java-clone',
+			'java-codesize',
+			'java-comments',
+			'java-controversial',
+			'java-coupling',
+			'java-design',
+			'java-empty',
+			'java-finalizers',
+			'java-imports',
+			'java-optimizations',
+			'java-strictexception',
+			'java-strings',
+			'java-typeresolution',
+			'java-unnecessary',
+			'java-unusedcode'
+	]
+}
 
 dependencies {
 	compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.12'
+	compile group: 'pmd', name: 'pmd', version: '4.3'
 	compile group: 'org.hibernate', name: 'hibernate-validator', version: '5.4.1.Final'
 	compile group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
 	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
