--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,10 @@ pmd {
 	]
 }
 
+test {
+	ignoreFailures = false
+}
+
 dependencies {
 	compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.12'
 	compile group: 'pmd', name: 'pmd', version: '4.3'
