--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,6 @@ repositories {
 
 dependencies {
 	compile group: 'com.itextpdf', name: 'itextpdf', version: '5.5.12'
-//	compile group: 'org.hibernate', name: 'hibernate-validator', version: '5.4.1.Final'
-//	compile group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
 	compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-security')
@@ -37,9 +35,7 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-mail")
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile 'org.thymeleaf.extras:thymeleaf-extras-springsecurity4:2.1.2.RELEASE'
-//	compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity4', version: '3.0.2.RELEASE'
-	compile group: 'javax.mail', name: 'mail', version: '1.4'
-	compile 'org.simplejavamail:simple-java-mail:5.0.3'
+	compile group: 'com.sun.mail', name: 'javax.mail', version: '1.6.1'
 	compile('org.springframework.boot:spring-boot-devtools')
 	runtime('mysql:mysql-connector-java')
 	compileOnly('org.projectlombok:lombok')
