--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,16 @@ spring.jpa.show-sql=true
 #spring.mail.properties.mail.smtp.ssl.enable=true
 #spring.mail.properties.mail.smtp.fallback=true
 
+#spring.mail.host=smtp.gmail.com
+#spring.mail.username=evolve.register@gmail.com
+#spring.mail.password=evolvepassword
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.port=587
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.socketFactory.port=587
+#spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+#spring.mail.properties.mail.smtp.socketFactory.fallback=true
+#
 server.port: 8181
 server.ssl.key-store: classpath:keystore.p12
 server.ssl.key-store-password: 123456
