--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,33 +7,10 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
 
-#spring.mail.username=evolve.register@gmail.com
-#spring.mail.password=evolvepassword
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.host=smtp.gmail.com
-#spring.mail.properties.mail.smtp.socketFactory.port=587
-
-#spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-#spring.mail.properties.mail.smtp.socketFactory.fallback=false
-
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.port=465
-#spring.mail.properties.mail.smtp.ssl.enable=true
-#spring.mail.properties.mail.smtp.fallback=true
-
-#spring.mail.host=smtp.gmail.com
-#spring.mail.username=evolve.register@gmail.com
-#spring.mail.password=evolvepassword
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.port=587
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.properties.mail.smtp.socketFactory.port=587
-#spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-#spring.mail.properties.mail.smtp.socketFactory.fallback=true
-#
 server.port: 8181
 server.ssl.key-store: classpath:keystore.p12
 server.ssl.key-store-password: 123456
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: tomcat
+
+spring.output.ansi.enabled=always
